@@ -6,7 +6,7 @@
   end
 -%>
 HOSTS:
-  el6:
+  oel6:
     roles:
       - default
       - master
@@ -15,11 +15,18 @@ HOSTS:
     box: onyxpoint/oel-6-x86_64
     hypervisor: <%= hypervisor %>
 
-  el7:
+  oel7:
     roles:
       - client
     platform: el-7-x86_64
     box: onyxpoint/oel-7-x86_64
+    hypervisor: <%= hypervisor %>
+
+  oel8:
+    roles:
+      - client
+    platform: el-8-x86_64
+    box: generic/oracle8
     hypervisor: <%= hypervisor %>
 
 CONFIG:
